# SoftEng2025

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  generate_build.bat  hello.cpp  run_tests.bat
.github/workflows/: First_CD.yml  first_CI.yml
cmake/: HelloProjectConfig.cmake.in  HelloProjectConfig.h.in
include/basic/: message.h
include/simtown/: building.h  dyn_array.h  rock.h
mains/: CMakeLists.txt  SimTown_main.cpp  hello.cpp
src/basic/: CMakeLists.txt  message.cpp
src/simtown/: Building.cpp  CMakeLists.txt  Rock.cpp
tests/: CMakeLists.txt  test-hello.cpp  test-version.cpp
